@@ -1,3 +1,4 @@
 FR0000124141;VEOLIA ENVIRON.;VIE;EURONEXT;EUR;PAR;FR
 NL0000400653;GEMALTO;GTO;EURONEXT;EUR;PAR;NL
 FR0000073272;SAFRAN;SAF;EURONEXT;EUR;PAR;FR
+FR0004152593;A NOVO;NOV;EURONEXT;EUR;PAR;FR
